--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="nav__left">
+                        <img src="images/logo.svg">
+            </div>
+        </nav>
+    </header>
     
 </body>
 </html>
