--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 <body>
     <header>
         <nav>
+            <container>
             <div class="nav__left">
                         <img src="images/logo.svg">
             </div>
+            <ul>
+<li><a href="#">Home</a></li>
+<li><a href="#">About Us</a></li>
+<li><a href="#">Shop</a></li>
+<li><a href="#">Contact</a></li>
+            </ul>
+            </container>
         </nav>
     </header>
     
