added added .nav__center

--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <container>
+      <nav>
+        <div class="container">
+          <div class="nav__container">
             <div class="nav__left">
-                        <img src="images/logo.svg">
+              <img src="images/logo.svg" />
             </div>
-            <ul>
-<li><a href="#">Home</a></li>
-<li><a href="#">About Us</a></li>
-<li><a href="#">Shop</a></li>
-<li><a href="#">Contact</a></li>
-            </ul>
-            </container>
-        </nav>
+
+            <div class="nav__center">
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+
+            <div class="nav__right">
+              <div>
+                <img src="images/shopping-cart.png" width="35" />
+              </div>
+              <div>
+                <img src="images/avatar.png" width="35" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
-    
-</body>
+  </body>
 </html>
