added a hero section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
             </div>
           </div>
         </div>
+        <hero>
+          <div class="container">
+            <div class="hero__left">
+              <h2>Easy way to order your food</h2>
+              <h1>Choosing Healthy
+                & Fresh Pizza</h1>
+                <p>We offer the fastest and favorite pizza delivery services all over the country.
+
+                  Search for your favorite pizza toppings here.</p>
+                  
+            </div>
+          </div>
+        </hero>
       </nav>
     </header>
   </body>
