--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 <p>We offer the fastest and favorite pizza delivery services all over the country.
 
                   Search for your favorite pizza toppings here.</p>
-                  
+                  <label>Search</label>
+                  <input type="search" placeholder="find pizza type">
             </div>
           </div>
         </hero>
