styled a .hero__left p

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <hero>
           <div class="container">
             <div class="hero__left">
-              <h2>Easy way to order your food</h2>
-              <h1>Choosing Healthy
+              <p >Easy way to order your food</p>
+              <h1>Choosing Healthy<br>
                 & Fresh Pizza</h1>
-                <p>We offer the fastest and favorite pizza delivery services all over the country.
+                <p>We offer the fastest and favorite pizza delivery services all over the country.<br>
 
                   Search for your favorite pizza toppings here.</p>
-                  <label>Search</label>
-                  <input type="search" placeholder="find pizza type">
+                  
+                  <input type="search" placeholder="find pizza type"><label>Search</label>
             </div>
           </div>
         </hero>
