styled .hero__left label

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <div class="container">
             <div class="hero__left">
               <p >Easy way to order your food</p>
-              <h1>Choosing Healthy<br>
-                & Fresh Pizza</h1>
+              <h1>Choosing <span>Healthy</span><br>
+                & <span>Fresh </span>Pizza</h1>
                 <p>We offer the fastest and favorite pizza delivery services all over the country.<br>
 
                   Search for your favorite pizza toppings here.</p>
