added element hero

--- a/index.html
+++ b/index.html
@@ -41,26 +41,74 @@
       </nav>
       <hero>
         <div class="container">
-          <div class="hero__left">
-            <p>Easy way to order your food</p>
-            <h1>
-              Choosing <span>Healthy</span><br />
-              & <span>Fresh </span>Pizza
-            </h1>
-            <p>
-              We offer the fastest and favorite pizza delivery services all over
-              the country.<br />
+          <div class="hero__container">
+            <div class="hero__left">
+              <p>Easy way to order your food</p>
+              <h1>
+                Choosing <span>Healthy</span><br />
+                & <span>Fresh </span>Pizza
+              </h1>
+              <p>
+                We offer the fastest and favorite pizza delivery services all
+                over the country.<br />
 
-              Search for your favorite pizza toppings here.
-            </p>
-            <div>
-              <i class="fa-solid fa-magnifying-glass"></i>
-              <input type="search" placeholder="find pizza type" />
+                Search for your favorite pizza toppings here.
+              </p>
+              <div class="search">
+                <div class="searchbar">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                  <input type="search" placeholder="find pizza type" />
+                </div>
+                <div class="search__button">
+                  <button>Search</button>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card__left">
+                  <div class="card__left--image">
+                    <img src="images/cutlery.png" width="100"/>
+                  </div>
+                  <div>
+                    <p>
+                      500+<br />
+                      Restaurants
+                    </p>
+                  </div>
+                </div>
+                <div class="card__center">
+                  <div class="card__center--image">
+                    <img src="images/fresh-pizza.png" width="100"/>
+                  </div>
+                  <div>
+                    <p>
+                      200+<br>
+                      Pizza Varieties
+                    </p>
+                  </div>
+                </div>
+                <div class="card__right">
+                  <div class="card__right--image">
+                    <img src="images/star.png" width="100">
+                  </div>
+                  <div>
+                    <p>
+                      (7.8)<br>
+                      10k Reviews
+                    </p>
+                  </div>
+                </div>
+              </div>
+              </div>
+              <div class="hero__right">
+                <img src="images/hero-pizza.png" />
+                <div>
+                  <img src="images/pizza-1.png" width="150" />
+                  <img src="images/pizza-2.png" width="100" />
+                  <img src="images/pizza-3.png" width="100" />
+                  <img src="images/pizza-4.png" width="100" />
+                </div>
+              </div>
             </div>
-            <div>
-              <button>Search</button>
-            </div>
-          </div>
         </div>
       </hero>
     </header>
