--- a/index.html
+++ b/index.html
@@ -111,6 +111,19 @@
             </div>
         </div>
       </hero>
+      <section class="menu">
+<p>New menu</p>
+<h3>Special Menu For You </h3>
+<div class="menu__links">
+  <ul>
+    <li><a href="#">Chicken Pizza</a></li>
+    <li><a href="#">Pepperoni</a> </li>
+     <li><a href="#">Margherita</a></li>
+      <li><a href="#">Hawaiian</a></li>
+      <li><a href="#">Meet Lover's Pizza</a></li>
+  </ul>
+</div>
+      </section>
     </header>
   </body>
 </html>
