--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
       <li><a href="#">Meet Lover's Pizza</a></li>
   </ul>
 </div>
+<div class="menu__cart">
+
+</div>
       </section>
     </header>
   </body>
