addded an image

--- a/index.html
+++ b/index.html
@@ -124,7 +124,23 @@
   </ul>
 </div>
 <div class="menu__cart">
-
+<div class="menu__cart--left">
+  <div>
+    <img src="images/barbecue-chicken-pizza.png">
+  </div>
+<div>
+  <p>BBQ Chicken Pizza<br>(Cheese with shrimp)<br>Ksh.1500</p>
+</div>
+<button>Add to Cart</button>
+</div>
+<div class="menu__cart--center">
+  <div>
+    <img src="images/tandoori-chicken.png">
+  </div>
+  <div>
+    <p>Tandori Chicken Pizza<br>(Cheese with Shrimp)</p>
+  </div>
+</div>
 </div>
       </section>
     </header>
