--- a/index.html
+++ b/index.html
@@ -138,8 +138,18 @@
     <img src="images/tandoori-chicken.png">
   </div>
   <div>
-    <p>Tandori Chicken Pizza<br>(Cheese with Shrimp)</p>
+    <p>Tandori Chicken Pizza<br>(Cheese with Shrimp)<br>Ksh.1500</p>
   </div>
+  <button>Add to Cart</button>
+</div>
+<div class="menu__cart--right">
+  <div>
+    <img src="images/chicken-kebab.png">
+  </div>
+  <div>
+    <p>Chiken kebab Pizza<br>(Chicken with Shrimp)<br>Ksh.1500</p>
+  </div>
+  <button>Add to Cart</button>
 </div>
 </div>
       </section>
