--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         </div>
       </hero>
       <section class="menu">
+        <div class="container">
 <p>New menu</p>
 <h3>Special Menu For You </h3>
 <div class="menu__links">
@@ -153,6 +154,7 @@
 </div>
 </div>
 <button>View More</button>
+</div>
       </section>
     </header>
   </body>
