styled some files

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       </hero>
       <section class="menu">
         <div class="container">
-<p>New menu</p>
-<h3>Special Menu For You </h3>
+<p>New in Menu</p>
+<h3><span>Special Menu</span> For You </h3>
 <div class="menu__links">
   <ul>
     <li><a href="#">Chicken Pizza</a></li>
