styled some files

--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
       </hero>
       <section class="menu">
         <div class="container">
+          <div class="menu__title">
 <p>New in Menu</p>
-<h3><span>Special Menu</span> For You </h3>
+<h1><span>Special Menu</span> For You </h1>
+</div>
 <div class="menu__links">
   <ul>
     <li><a href="#">Chicken Pizza</a></li>
@@ -127,7 +129,7 @@
 <div class="menu__cart">
 <div class="menu__cart--left">
   <div>
-    <img src="images/barbecue-chicken-pizza.png">
+    <img src="images/barbecue-chicken-pizza.png" width="120">
   </div>
 <div>
   <p>BBQ Chicken Pizza<br>(Cheese with shrimp)<br>Ksh.1500</p>
@@ -136,7 +138,7 @@
 </div>
 <div class="menu__cart--center">
   <div>
-    <img src="images/tandoori-chicken.png">
+    <img src="images/tandoori-chicken.png" width="120">
   </div>
   <div>
     <p>Tandori Chicken Pizza<br>(Cheese with Shrimp)<br>Ksh.1500</p>
@@ -145,7 +147,7 @@
 </div>
 <div class="menu__cart--right">
   <div>
-    <img src="images/chicken-kebab.png">
+    <img src="images/chicken-kebab.png" width="165">
   </div>
   <div>
     <p>Chiken kebab Pizza<br>(Chicken with Shrimp)<br>Ksh.1500</p>
