--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="card__center">
                   <div class="card__center--image">
-                    <img src="images/fresh-pizza.png" width="100"/>
+                    <img src="images/varieties.png" width="100"/>
                   </div>
                   <div>
                     <p>
@@ -111,53 +111,108 @@
             </div>
         </div>
       </hero>
-      <section class="menu">
-        <div class="container">
-          <div class="menu__title">
+      
+    </header>
+    <section class="menu">
+      <div class="container">
+        <div class="menu__title">
 <p>New in Menu</p>
 <h1><span>Special Menu</span> For You </h1>
 </div>
 <div class="menu__links">
-  <ul>
-    <li><a href="#">Chicken Pizza</a></li>
-    <li><a href="#">Pepperoni</a> </li>
-     <li><a href="#">Margherita</a></li>
-      <li><a href="#">Hawaiian</a></li>
-      <li><a href="#">Meet Lover's Pizza</a></li>
-  </ul>
+<ul>
+  <li><a href="#">Chicken Pizza</a></li>
+  <li><a href="#">Pepperoni</a> </li>
+   <li><a href="#">Margherita</a></li>
+    <li><a href="#">Hawaiian</a></li>
+    <li><a href="#">Meet Lover's Pizza</a></li>
+</ul>
 </div>
 <div class="menu__cart">
 <div class="menu__cart--left">
-  <div>
-    <img src="images/barbecue-chicken-pizza.png" width="120">
-  </div>
 <div>
-  <p>BBQ Chicken Pizza<br>(Cheese with shrimp)<br>Ksh.1500</p>
+  <img src="images/barbecue-chicken-pizza.png" width="120">
+</div>
+<div>
+<p>BBQ Chicken Pizza<br>(Cheese with shrimp)<br>Ksh.1500</p>
 </div>
 <button>Add to Cart</button>
 </div>
 <div class="menu__cart--center">
-  <div>
-    <img src="images/tandoori-chicken.png" width="120">
-  </div>
-  <div>
-    <p>Tandori Chicken Pizza<br>(Cheese with Shrimp)<br>Ksh.1500</p>
-  </div>
-  <button>Add to Cart</button>
+<div>
+  <img src="images/tandoori-chicken.png" width="120">
+</div>
+<div>
+  <p>Tandori Chicken Pizza<br>(Cheese with Shrimp)<br>Ksh.1500</p>
+</div>
+<button>Add to Cart</button>
 </div>
 <div class="menu__cart--right">
-  <div>
-    <img src="images/chicken-kebab.png" width="165">
-  </div>
-  <div>
-    <p>Chiken kebab Pizza<br>(Chicken with Shrimp)<br>Ksh.1500</p>
-  </div>
-  <button>Add to Cart</button>
+<div>
+  <img src="images/chicken-kebab.png" width="165">
+</div>
+<div>
+  <p>Chiken kebab Pizza<br>(Chicken with Shrimp)<br>Ksh.1500</p>
+</div>
+<button>Add to Cart</button>
 </div>
 </div>
 <button>View More</button>
 </div>
-      </section>
-    </header>
+    </section>
+    <section class="whyus">
+<div class="whyus__left">
+  <img src="images/why-us.png">
+</div>
+<div class="why__right">
+  <p>Why us</p>
+  <h1>Why We Are <span>The Best</span></h1>
+  <p>We always try to maintain our food quality for our customers. 
+
+    Our customers’ satisfaction is our top priority.</p>
+    <div>
+      <div class="card">
+<div class="card__up">
+  <img src="images/fresh-pizza.png">
+  <h3>Fresh Pizza</h3>
+  <P>We make our pizza to suit your needs as
+    we use the best quality ingredients.</P>
+</div>
+<div class="card__middle">
+  <img src="images/fast-delivery.png">
+<h3>Fast Delivery</h3>
+<p>Through rapid delivery, we provide a high
+  level of customer service</p>
+</div>
+<div class="card__down">
+  <img src="images/quality.png">
+  <h3>Best Quality</h3>
+  <p>Our delivery service that is available at
+    any time and usually everyday.</p>
+</div>
+      </div>
+    </div>
+</div>
+    </section>
+    <section class="help">
+      <p>Need Any Help?</p>
+      <h1><span>Our support Team</span>span Is Ready To Assist you</h1>
+      <div class="card">
+
+        <div class="card__left">
+          <img src="images/mail.png">
+          <h3>Email Address</h3>
+          <p>pizaaradeliveries@info.com</p>
+        </div>
+        <div class="card__center">
+          <img src="images/live-support.png">
+          <h3>Live Support</h3>
+          <P>Get live support now</P>
+        </div>
+        <div class="card__right">
+          <img src="images/phone.png">
+        </div>
+</div>
+    </section>
   </body>
 </html>
