--- a/index.html
+++ b/index.html
@@ -211,8 +211,13 @@
         </div>
         <div class="card__right">
           <img src="images/phone.png">
+          <h3>Phone Number</h3>
+          <p>+2547 11 555 888</p>
         </div>
 </div>
     </section>
+    <footer>
+      <div class></div>
+    </footer>
   </body>
 </html>
