--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@
 </div>
     </section>
     <footer>
-      <div class></div>
+      <div class="footer__left">
+        
+      </div>
     </footer>
   </body>
 </html>
