styled the file

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       </hero>
       
     </header>
-    <section class="menu">
-      <div class="container">
+    <section class="container">
+    <div class="menu">
         <div class="menu__title">
 <p>New in Menu</p>
 <h1><span>Special Menu</span> For You </h1>
@@ -160,7 +160,8 @@
 <button>View More</button>
 </div>
     </section>
-    <section class="whyus">
+    <section class="container">
+      <div class="whyus">
 <div class="whyus__left">
   <img src="images/why-us.png">
 </div>
@@ -173,19 +174,19 @@
     <div>
       <div class="card">
 <div class="card__up">
-  <img src="images/fresh-pizza.png">
+  <img src="images/fresh-pizza.png" width="100">
   <h3>Fresh Pizza</h3>
   <P>We make our pizza to suit your needs as
     we use the best quality ingredients.</P>
 </div>
 <div class="card__middle">
-  <img src="images/fast-delivery.png">
+  <img src="images/fast-delivery.png" width="100">
 <h3>Fast Delivery</h3>
 <p>Through rapid delivery, we provide a high
   level of customer service</p>
 </div>
 <div class="card__down">
-  <img src="images/quality.png">
+  <img src="images/quality.png" width="100">
   <h3>Best Quality</h3>
   <p>Our delivery service that is available at
     any time and usually everyday.</p>
@@ -193,14 +194,16 @@
       </div>
     </div>
 </div>
+      </div>
     </section>
-    <section class="help">
+    <section class="container">
+      <div class="help">
       <p>Need Any Help?</p>
       <h1><span>Our support Team</span>span Is Ready To Assist you</h1>
       <div class="card">
 
         <div class="card__left">
-          <img src="images/mail.png">
+          <img src="images/mail.png" width="100">
           <h3>Email Address</h3>
           <p>pizaaradeliveries@info.com</p>
         </div>
@@ -215,10 +218,11 @@
           <p>+2547 11 555 888</p>
         </div>
 </div>
+      </div>
     </section>
-    <footer>
+    <footer class="container">
       <div class="footer__left">
-        
+
       </div>
     </footer>
   </body>
