--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <div class="card">
                 <div class="card__left">
                   <div class="card__left--image">
-                    <img src="images/cutlery.png" width="100"/>
+                    <img src="images/cutlery.png" width="100" />
                   </div>
                   <div>
                     <p>
@@ -77,152 +77,198 @@
                 </div>
                 <div class="card__center">
                   <div class="card__center--image">
-                    <img src="images/varieties.png" width="100"/>
+                    <img src="images/varieties.png" width="100" />
                   </div>
                   <div>
                     <p>
-                      200+<br>
+                      200+<br />
                       Pizza Varieties
                     </p>
                   </div>
                 </div>
                 <div class="card__right">
                   <div class="card__right--image">
-                    <img src="images/star.png" width="100">
+                    <img src="images/star.png" width="100" />
                   </div>
                   <div>
                     <p>
-                      (7.8)<br>
+                      (7.8)<br />
                       10k Reviews
                     </p>
                   </div>
                 </div>
               </div>
-              </div>
-              <div class="hero__right">
-                <img src="images/hero-pizza.png" />
-                <div>
-                  <img src="images/pizza-1.png" width="150" />
-                  <img src="images/pizza-2.png" width="100" />
-                  <img src="images/pizza-3.png" width="100" />
-                  <img src="images/pizza-4.png" width="100" />
-                </div>
+            </div>
+            <div class="hero__right">
+              <img src="images/hero-pizza.png" />
+              <div>
+                <img src="images/pizza-1.png" width="150" />
+                <img src="images/pizza-2.png" width="100" />
+                <img src="images/pizza-3.png" width="100" />
+                <img src="images/pizza-4.png" width="100" />
               </div>
             </div>
+          </div>
         </div>
       </hero>
-      
     </header>
     <section class="container">
-    <div class="menu">
+      <div class="menu">
         <div class="menu__title">
-<p>New in Menu</p>
-<h1><span>Special Menu</span> For You </h1>
-</div>
-<div class="menu__links">
-<ul>
-  <li><a href="#">Chicken Pizza</a></li>
-  <li><a href="#">Pepperoni</a> </li>
-   <li><a href="#">Margherita</a></li>
-    <li><a href="#">Hawaiian</a></li>
-    <li><a href="#">Meet Lover's Pizza</a></li>
-</ul>
-</div>
-<div class="menu__cart">
-<div class="menu__cart--left">
-<div>
-  <img src="images/barbecue-chicken-pizza.png" width="120">
-</div>
-<div>
-<p>BBQ Chicken Pizza<br>(Cheese with shrimp)<br>Ksh.1500</p>
-</div>
-<button>Add to Cart</button>
-</div>
-<div class="menu__cart--center">
-<div>
-  <img src="images/tandoori-chicken.png" width="120">
-</div>
-<div>
-  <p>Tandori Chicken Pizza<br>(Cheese with Shrimp)<br>Ksh.1500</p>
-</div>
-<button>Add to Cart</button>
-</div>
-<div class="menu__cart--right">
-<div>
-  <img src="images/chicken-kebab.png" width="165">
-</div>
-<div>
-  <p>Chiken kebab Pizza<br>(Chicken with Shrimp)<br>Ksh.1500</p>
-</div>
-<button>Add to Cart</button>
-</div>
-</div>
-<button>View More</button>
-</div>
+          <p style="color: #eea539">New in Menu</p>
+          <h1><span>Special Menu</span> For You</h1>
+        </div>
+        <div class="menu__links">
+          <ul>
+            <li><a href="#">Chicken Pizza</a></li>
+            <li><a href="#">Pepperoni</a></li>
+            <li><a href="#">Margherita</a></li>
+            <li><a href="#">Hawaiian</a></li>
+            <li><a href="#">Meet Lover's Pizza</a></li>
+          </ul>
+        </div>
+        <div class="menu__cart">
+          <div class="menu__cart--left">
+            <div>
+              <img src="images/barbecue-chicken-pizza.png" width="120" />
+            </div>
+            <div>
+              <p>BBQ Chicken Pizza<br />(Cheese with shrimp)<br />Ksh.1500</p>
+            </div>
+            <button>Add to Cart</button>
+          </div>
+          <div class="menu__cart--center">
+            <div>
+              <img src="images/tandoori-chicken.png" width="120" />
+            </div>
+            <div>
+              <p>
+                Tandori Chicken Pizza<br />(Cheese with Shrimp)<br />Ksh.1500
+              </p>
+            </div>
+            <button>Add to Cart</button>
+          </div>
+          <div class="menu__cart--right">
+            <div>
+              <img src="images/chicken-kebab.png" width="165" />
+            </div>
+            <div>
+              <p>Chiken kebab Pizza<br />(Chicken with Shrimp)<br />Ksh.1500</p>
+            </div>
+            <button>Add to Cart</button>
+          </div>
+        </div>
+        <button>View More</button>
+      </div>
     </section>
     <section class="container">
       <div class="whyus">
-<div class="whyus__left">
-  <img src="images/why-us.png">
-</div>
-<div class="why__right">
-  <p>Why us</p>
-  <h1>Why We Are <span>The Best</span></h1>
-  <p>We always try to maintain our food quality for our customers. 
-
-    Our customers’ satisfaction is our top priority.</p>
-    <div>
-      <div class="card">
-<div class="card__up">
-  <img src="images/fresh-pizza.png" width="100">
-  <h3>Fresh Pizza</h3>
-  <P>We make our pizza to suit your needs as
-    we use the best quality ingredients.</P>
-</div>
-<div class="card__middle">
-  <img src="images/fast-delivery.png" width="100">
-<h3>Fast Delivery</h3>
-<p>Through rapid delivery, we provide a high
-  level of customer service</p>
-</div>
-<div class="card__down">
-  <img src="images/quality.png" width="100">
-  <h3>Best Quality</h3>
-  <p>Our delivery service that is available at
-    any time and usually everyday.</p>
-</div>
-      </div>
-    </div>
-</div>
+        <div class="whyus__left">
+          <img src="images/why-us.png" />
+        </div>
+        <div class="why__right">
+          <div>
+            <p style="color: #eea539">Why us</p>
+            <h1>Why We Are <span>The Best</span></h1>
+            <p>
+              We always try to maintain our food quality for our customers. Our
+              customers’ satisfaction is our top priority.
+            </p>
+          </div>
+          <!-- <div> -->
+          <!-- <div class="card"> -->
+          <div class="card__up">
+            <div>
+              <img src="images/fresh-pizza.png" width="100" />
+            </div>
+            <div>
+              <h3>Fresh Pizza</h3>
+              <p>
+                We make our pizza to suit your needs as we use the best quality
+                ingredients.
+              </p>
+            </div>
+          </div>
+          <div class="card__middle">
+            <div>
+              <img src="images/fast-delivery.png" width="100" />
+            </div>
+            <div>
+              <h3>Fast Delivery</h3>
+              <p>
+                Through rapid delivery, we provide a high level of customer
+                service
+              </p>
+            </div>
+          </div>
+          <div class="card__down">
+            <div>
+              <img src="images/quality.png" width="100" />
+            </div>
+            <div>
+              <h3>Best Quality</h3>
+              <p>
+                Our delivery service that is available at any time and usually
+                everyday.
+              </p>
+            </div>
+          </div>
+          <!-- </div> -->
+          <!-- </div> -->
+        </div>
       </div>
     </section>
     <section class="container">
       <div class="help">
-      <p>Need Any Help?</p>
-      <h1><span>Our support Team</span>span Is Ready To Assist you</h1>
-      <div class="card">
-
-        <div class="card__left">
-          <img src="images/mail.png" width="100">
-          <h3>Email Address</h3>
-          <p>pizaaradeliveries@info.com</p>
+        <div class="help__title">
+          <p style="color: #eea539">Need Any Help?</p>
+          <h1><span>Our support Team</span>span Is Ready To Assist you</h1>
         </div>
-        <div class="card__center">
-          <img src="images/live-support.png">
-          <h3>Live Support</h3>
-          <P>Get live support now</P>
+        <div class="card">
+          <div class="card__left">
+            <img src="images/mail.png" width="30" />
+            <h3>Email Address</h3>
+            <p>pizaaradeliveries@info.com</p>
+          </div>
+          <div class="card__center">
+            <img src="images/live-support.png" width="30" />
+            <h3>Live Support</h3>
+            <p>Get live support now</p>
+          </div>
+          <div class="card__right">
+            <img src="images/phone.png" width="30" />
+            <h3>Phone Number</h3>
+            <p>+2547 11 555 888</p>
+          </div>
         </div>
-        <div class="card__right">
-          <img src="images/phone.png">
-          <h3>Phone Number</h3>
-          <p>+2547 11 555 888</p>
-        </div>
-</div>
       </div>
     </section>
-    <footer class="container">
-      <div class="footer__left">
-
+    <footer>
+      <div class="container">
+        <div class="footer__container">
+          <div class="footer__left">
+            <img src="images/logo_light.svg" />
+            <p>Stay Connected</p>
+            <img src="images/facebook.png" width="50" />
+            <img src="images/instagram.png" width="50" />
+            <img src="images/twitter.png" width="50" />
+            <img src="images/linkedin.png" width="50" />
+          </div>
+          <div class="footer__center">
+            <h2>Quick Links</h2>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="footer__right">
+            <h2>Subscribe To Our Newsletter to stay updated.</h2>
+            <input type="email" placeholder="Email Address" />
+            <button>Subscribe</button>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
