styled some files

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </div>
 
             <div class="nav__center">
-              <ul>
-                <li><a href="#">Home</a></li>
+              <ul>                                                                                                                                                                                                                                                                                                                                                                                               
+                <li><a href="/">Home</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Shop</a></li>
+                <li><a href="/shop.html">Shop</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
             </div>
@@ -56,7 +56,7 @@
               </p>
               <div class="search">
                 <div class="searchbar">
-                  <i class="fa-solid fa-magnifying-glass"></i>
+                  <i class="fa-solid fa-magnifying-glass fa-2x"></i>
                   <input type="search" placeholder="find pizza type" />
                 </div>
                 <div class="search__button">
@@ -66,7 +66,7 @@
               <div class="card">
                 <div class="card__left">
                   <div class="card__left--image">
-                    <img src="images/cutlery.png" width="100" />
+                    <img src="images/cutlery.png" width="40" />
                   </div>
                   <div>
                     <p>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="card__center">
                   <div class="card__center--image">
-                    <img src="images/varieties.png" width="100" />
+                    <img src="images/varieties.png" width="40" />
                   </div>
                   <div>
                     <p>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="card__right">
                   <div class="card__right--image">
-                    <img src="images/star.png" width="100" />
+                    <img src="images/star.png" width="40" />
                   </div>
                   <div>
                     <p>
@@ -116,7 +116,7 @@
       <div class="menu">
         <div class="menu__title">
           <p style="color: #eea539">New in Menu</p>
-          <h1><span>Special Menu</span> For You</h1>
+          <h2><span>Special Menu</span> For You</h2>
         </div>
         <div class="menu__links">
           <ul>
@@ -133,7 +133,7 @@
               <img src="images/barbecue-chicken-pizza.png" width="120" />
             </div>
             <div>
-              <p>BBQ Chicken Pizza<br />(Cheese with shrimp)<br />Ksh.1500</p>
+              <h3>BBQ Chicken Pizza</h3>(<p>Cheese with shrimp)</p><h3>Ksh.1500</h3>
             </div>
             <button>Add to Cart</button>
           </div>
@@ -158,7 +158,7 @@
             <button>Add to Cart</button>
           </div>
         </div>
-        <button>View More</button>
+        <button class="view">View More</button>
       </div>
     </section>
     <section class="container">
@@ -169,7 +169,7 @@
         <div class="why__right">
           <div>
             <p style="color: #eea539">Why us</p>
-            <h1>Why We Are <span>The Best</span></h1>
+            <h2>Why We Are <span>The Best</span></h2>
             <p>
               We always try to maintain our food quality for our customers. Our
               customers’ satisfaction is our top priority.
@@ -179,7 +179,7 @@
           <!-- <div class="card"> -->
           <div class="card__up">
             <div>
-              <img src="images/fresh-pizza.png" width="100" />
+              <img src="images/fresh-pizza.png" width="40" />
             </div>
             <div>
               <h3>Fresh Pizza</h3>
@@ -191,7 +191,7 @@
           </div>
           <div class="card__middle">
             <div>
-              <img src="images/fast-delivery.png" width="100" />
+              <img src="images/fast-delivery.png" width="40" />
             </div>
             <div>
               <h3>Fast Delivery</h3>
@@ -203,7 +203,7 @@
           </div>
           <div class="card__down">
             <div>
-              <img src="images/quality.png" width="100" />
+              <img src="images/quality.png" width="40" />
             </div>
             <div>
               <h3>Best Quality</h3>
@@ -221,8 +221,8 @@
     <section class="container">
       <div class="help">
         <div class="help__title">
-          <p style="color: #eea539">Need Any Help?</p>
-          <h1><span>Our support Team</span>span Is Ready To Assist you</h1>
+          <h4 style="color: #eea539">Need Any Help?</h4>
+          <h2><span>Our support Team</span> Is Ready To Assist you</h2>
         </div>
         <div class="card">
           <div class="card__left">
