styled some files

--- a/shop.html
+++ b/shop.html
@@ -269,8 +269,10 @@
               </div>
               <div class="footer__right">
                 <h2>Subscribe To Our Newsletter to <br>stay updated.</h2>
+                <div class="subscribe">
                 <input type="email" placeholder="Email Address" />
                 <button>Subscribe</button>
+                </div>
               </div>
             </div>
           </div>
